<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>diffbot</name>
  <version>0.0.0</version>
  <description>introductory example based on [[https://github.com/joshnewans/articubot_one][articubot_one]], implementing a simple differential drive robot</description>
  <maintainer email="eric.elbing@htwk-leipzig.de">Eric Elbing</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
